# sheeple

./: .gitignore  AUTHORS  Makefile  Makefile.am  README  autogen.sh  configure.ac  indent.sh  libsheeple-1.0.pc.in  sheeple.doap
src/: Makefile.am  callbacks.c  callbacks.h  main.c  sheeple.ui
src/libsheeple/: SheepleBackend.vala  SheepleContact.vala  SheepleContactBackend.vala  SheepleContactEDSBackend.c  SheepleContactEDSBackend.h  SheepleContactList.vala  SheepleContactStore.vala  SheepleContactView.vala  SheepleContactViewUI.vala  SheepleEDSBackend.c  SheepleEDSBackend.h  SheepleEDSBackendGroup.c  SheepleEDSBackendGroup.h  SheepleEDSContact.c  SheepleEDSContact.h  SheepleEditorField.vala  SheepleEditorList.vala  SheepleGoogleBackend.vala  SheepleGroup.c  SheepleGroup.h  SheepleGroup.vala  SheepleMetaContact.vala  SheepleSource.c  SheepleSource.h  SheepleSource.vala  SheepleSourceView.c  SheepleSourceView.h  SheepleSourceView.vala  SheepleStore.vala  SheepleToolbar.vala  libsheeple-1.0.pc.in  sheeple.c  sheeple.h
src/libsheeple/broken/: SheepleEDSBackend.c  SheepleEDSBackend.h  SheepleEDSBackendGroup.c  SheepleEDSContact.c
src/sheeple/: SheepleSourceViewCellRenderer.c  SheepleSourceViewCellRenderer.h  callbacks.c  callbacks.h  main.c
vapi/: couchdb-glib-1.0.vapi  seed.vapi
vapi/couchdb-glib-1.0/: couchdb-glib-1.0.files
vapi/libgdata/: libgdata.files
vapi/seed/: seed.files  seed.namespace
